Fix overflow for user content inside descriptions

--- a/src/styles/components/WebPageView.pcss
+++ b/src/styles/components/WebPageView.pcss
@@ -43,6 +43,11 @@
     display: block;
   }
 
+  & iframe,
+  & img {
+    max-width: 100%;
+  }
+
   & .information {
     display: flex;
 
